<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settingActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setting_showallgame"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_200sdp"
        android:background="@drawable/btn_login_register"
        android:text="@string/all_games"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setting_showlastgamedate"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_11sdp"
        android:background="@drawable/btn_login_register"
        android:text="@string/last_game_date"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setting_change_password"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_11sdp"
        android:background="@drawable/btn_login_register"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/setting_clear_game"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_11sdp"
        android:background="@drawable/btn_login_register"
        android:text="@string/clear_game"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />
</LinearLayout>