<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="always"
    android:padding="@dimen/_16sdp"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/register_img"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/user"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/img_user_register"
        android:padding="@dimen/_3sdp"
        tools:ignore="MissingClass"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_18sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user_svgrepo_com__3_"
            android:drawablePadding="@dimen/_7sdp"
            android:ems="10"
            android:hint="@string/fullName"
            android:inputType="textPersonName"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_et_EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:drawableLeft="@drawable/ic_email_svgrepo_com"
            android:drawablePadding="@dimen/_7sdp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user_svgrepo_com__3_"
            android:drawablePadding="@dimen/_7sdp"
            android:hint="@string/userName"
            android:inputType="textPersonName"
            android:ems="10"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/regster_linear_pass_repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginRight="@dimen/_7sdp"
            android:layout_weight="1">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password_svgrepo_com"
                android:drawablePadding="@dimen/_7sdp"
                android:ems="10"
                android:hint="@string/register_pass"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_36sdp"
                            android:layout_weight="1"
                            android:layout_marginRight="@dimen/_7sdp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/register_rePassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:drawableLeft="@drawable/ic_password_svgrepo_com"
                                android:drawablePadding="@dimen/_7sdp"
                                android:ems="10"
                                android:hint="@string/register_repass"
                                android:inputType="textPassword"
                                android:padding="@dimen/_8sdp"
                                android:textSize="@dimen/_12ssp" />
                        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <!--<android:inputType="none"-->
    <!-- عشان ما أقدر اكتب >-->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:hint="Country"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/register_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_marginRight="@dimen/_7sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_calender_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:drawableLeft="@drawable/ic_date_svgrepo_com"
            android:drawablePadding="@dimen/_7sdp"
            android:hint="@string/birthDay"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/register_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/register_rb_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/male"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/register_rb_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female"
            android:textColor="@color/black" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_login_register"
        android:text="@string/btn_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp" />

</LinearLayout>