<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/game_linear_h_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@drawable/shape_score"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/game_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/score"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp" />

        <TextView
            android:id="@+id/game_score_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/game_welcom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_9sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_marginBottom="@dimen/_9sdp"
        android:text="@string/welcome"
        android:textColor="@color/yellow"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/game_linear_h_name_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_9sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/game_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:typeface="normal" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray_dark" />
        </LinearLayout>

        <TextView
            android:id="@+id/game_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/game_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="20dp"
        android:columnCount="3"
        android:rowCount="3">

        <TextView
            android:id="@+id/gameNum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_number"
            android:gravity="center"
            android:text="2"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp" />

        <TextView
            android:id="@+id/gameNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@drawable/shape_number"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp" />

        <TextView
            android:id="@+id/gameNum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_number"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp" />

        <TextView
            android:id="@+id/gameNum6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/shape_number"
            android:gravity="center"
            android:text="5"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp" />

        <TextView
            android:id="@+id/gameNum5_required"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/shape_number"
            android:gravity="center"
            android:text="؟؟"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp" />

        <TextView
            android:id="@+id/gameNum4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_number"
            android:gravity="center"
            android:text="3"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp" />


        <TextView
            android:id="@+id/gameNum9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_number"
            android:gravity="center"
            android:text="8"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp" />

        <TextView
            android:id="@+id/gameNum8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@drawable/shape_number"
            android:gravity="center"
            android:text="7"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp" />

        <TextView
            android:id="@+id/gameNum7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="start"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_number"
            android:gravity="center"
            android:text="6"
            android:textColor="@color/black"
            android:textSize="@dimen/_21ssp" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_23sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_check_result"
            android:layout_width="@dimen/_85sdp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/btn_login_register"
            android:text="@string/btn_check"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />

        <EditText
            android:id="@+id/et_enter_number_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_login_yellow"
            android:ems="10"
            android:hint="@string/enter_num"
            android:inputType="numberSigned"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_new_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_34sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_marginRight="@dimen/_34sdp"
        android:background="@drawable/btn_login_register"
        android:text="@string/btn_newGame"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp" />
</LinearLayout>